made nav configurable

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,10 @@
         "singleQuote": true,
         "endOfLine": "auto"
       }
-    ]
+    ],
+    "react/self-closing-comp": ["error", {
+      "component": true,
+      "html": true
+    }]
   }
 }
