--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": [ "wesbos/typescript"],
-  "plugins": ["react"],
+  "plugins": ["import", "react"],
   "rules": {
+    "import/no-unresolved": "error",
     "prettier/prettier": [
       "error",
       {
@@ -14,5 +15,37 @@
       "component": true,
       "html": true
     }]
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true, // always try to resolve types under `<root>@types` directory even it doesn't contain any source code, like `@types/unist`
+
+        // Choose from one of the "project" configs below or omit to use <root>/tsconfig.json by default
+
+        // use <root>/path/to/folder/tsconfig.json
+        "project": "/"
+
+        // Multiple tsconfigs (Useful for monorepos)
+
+        // use a glob pattern
+        // "project": "packages/*/tsconfig.json",
+
+        // use an array
+        // "project": [
+        //   "packages/module-a/tsconfig.json",
+        //   "packages/module-b/tsconfig.json"
+        // ],
+
+        // use an array of glob patterns
+        // "project": [
+        //   "packages/*/tsconfig.json",
+        //   "other-packages/*/tsconfig.json"
+        // ]
+      }
+    }
   }
 }
