--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "eslint-plugin-neverthrow": "^1.1.4",
+    "neverthrow": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
@@ -52,6 +54,8 @@
   "devDependencies": {
     "eslint": "^8.34.0",
     "eslint-config-wesbos": "^3.2.3",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   }
