--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "titleBar.activeForeground": "#000",
     "titleBar.inactiveForeground": "#000000CC",
     "titleBar.activeBackground": "#00d5ff",
-    "titleBar.inactiveBackground": "#2a46b9cc"
+    "titleBar.inactiveBackground": "#7ff1f7"
   },
 
   "eslint.alwaysShowStatus": true,
