--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "date-fns": "^2.29.3",
     "eslint-plugin-neverthrow": "^1.1.4",
     "neverthrow": "^6.0.0",
     "react": "^18.2.0",
