added packages for state controlled popovers and x-data-grid

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,7 @@
         // Choose from one of the "project" configs below or omit to use <root>/tsconfig.json by default
 
         // use <root>/path/to/folder/tsconfig.json
-        "project": "/"
+        "project": "./tsconfig.json"
 
         // Multiple tsconfigs (Useful for monorepos)
 
