--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.123",
     "@mui/material": "^5.11.13",
     "@mui/system": "^5.11.9",
+    "@mui/x-data-grid": "^6.13.0",
     "@tanstack/react-table": "^8.7.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^18.0.11",
     "date-fns": "^2.29.3",
     "eslint-plugin-neverthrow": "^1.1.4",
+    "material-ui-popup-state": "^5.0.9",
     "neverthrow": "^6.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
