--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.0.11",
     "date-fns": "^2.29.3",
     "eslint-plugin-neverthrow": "^1.1.4",
+    "mapbox-gl": "^3.2.0",
     "material-ui-popup-state": "^5.0.9",
     "neverthrow": "^6.0.0",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-map-gl": "^7.1.7",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
